fix react-navigation linking configuration

--- a/generators/app/templates/app/modules/home/learn-more-links.component.js.ejs
+++ b/generators/app/templates/app/modules/home/learn-more-links.component.js.ejs
@@ -7,7 +7,8 @@
  */
 // slightly modified version of https://github.com/facebook/react-native/blob/e028ac7af2d5b48860f01055f3bbacf91f6b6956/Libraries/NewAppScreen/components/LearnMoreLinks.js
 
-import { View, Text, Linking, StyleSheet, TouchableOpacity } from 'react-native'
+import { View, Text, StyleSheet, TouchableOpacity } from 'react-native';
+import * as Linking from 'expo-linking';
 import React from 'react'
 import { Colors } from '../../shared/themes/'
 
