--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -46,6 +46,7 @@
     "react-native-screens": "REPLACE_WITH_VERSION",
     "react-native-web": "REPLACE_WITH_VERSION",
     "@expo/vector-icons": "REPLACE_WITH_VERSION",
+    "expo-linking": "REPLACE_WITH_VERSION",
     "formik": "REPLACE_WITH_VERSION",
     "@react-native-community/datetimepicker": "REPLACE_WITH_VERSION",
     "react-datepicker": "REPLACE_WITH_VERSION",
