--- a/generators/app/templates/App.js.ejs
+++ b/generators/app/templates/App.js.ejs
@@ -1,76 +1,15 @@
 import * as React from 'react';
-import { NavigationContainer } from '@react-navigation/native';
-import { useReduxDevToolsExtension } from '@react-navigation/devtools';
-import { createStackNavigator } from '@react-navigation/stack';
 import { Provider } from 'react-redux';
 import createStore from './app/shared/reducers';
 
-import DrawerStack, { drawerScreens } from './app/navigation/drawer.stack';
-import { entityScreens } from './app/navigation/entity.stack';
-import { navigationRef, isReadyRef } from './app/navigation/nav-ref.js';
-import { ModalScreen } from './app/navigation/modal.screen';
+import NavContainer from './app/navigation/nav-container';
 
 const store = createStore();
 
-const config = { screens: { ModalScreen: 'alert', Drawer: '' } };
-
-const mapScreensToConfig = (screens) => {
-  screens.forEach(screen => {
-    config.screens[screen.name] = screen.route;
-  })
-}
-mapScreensToConfig(drawerScreens);
-mapScreensToConfig(entityScreens);
-
-const linking = {
-  prefixes: ['https://<%= reactNativeAppName.toLowerCase() %>.com', '<%= reactNativeAppName.toLowerCase() %>://'],
-  config,
-};
-const RootStack = createStackNavigator();
-
 export default function App() {
-  React.useEffect(() => {
-    return () => {
-      isReadyRef.current = false
-    };
-  }, []);
-  useReduxDevToolsExtension(navigationRef);
   return (
     <Provider store={store}>
-      <NavigationContainer
-        linking={linking}
-        ref={navigationRef}
-        onReady={() => {
-          isReadyRef.current = true;
-        }}>
-         <RootStack.Navigator mode="modal">
-           <RootStack.Screen name="Drawer" component={DrawerStack} options={{ headerShown: false }} />
-           <RootStack.Screen
-             name="ModalScreen"
-             component={ModalScreen}
-             options={{
-               headerShown: false,
-               cardStyle: { backgroundColor: 'transparent' },
-               cardOverlayEnabled: true,
-               cardStyleInterpolator: ({ current: { progress } }) => ({
-                 cardStyle: {
-                   opacity: progress.interpolate({
-                     inputRange: [0, 0.5, 0.9, 1],
-                     outputRange: [0, 0.25, 0.7, 1],
-                   }),
-                 },
-                 overlayStyle: {
-                   opacity: progress.interpolate({
-                     inputRange: [0, 1],
-                     outputRange: [0, 0.5],
-                     extrapolate: 'clamp',
-                   }),
-                 },
-               }),
-             }}
-           />
-         </RootStack.Navigator>
-      </NavigationContainer>
+      <NavContainer />
     </Provider>
   );
 }
