--- a/generators/app/templates/app/navigation/nav-container.js.ejs
+++ b/generators/app/templates/app/navigation/nav-container.js.ejs
@@ -1,6 +1,10 @@
 import * as React from 'react';
 import { Text, useWindowDimensions, View } from 'react-native';
+import * as Linking from 'expo-linking';
+import { NavigationContainer } from '@react-navigation/native';
 import { createDrawerNavigator } from '@react-navigation/drawer';
+import { createStackNavigator } from '@react-navigation/stack';
+import { useReduxDevToolsExtension } from '@react-navigation/devtools';
 import { connect } from 'react-redux';
 
 // import screens
@@ -10,19 +14,15 @@ import SettingsScreen from '../modules/account/settings/settings-screen';
 import RegisterScreen from '../modules/account/register/register-screen';
 import ForgotPasswordScreen from '../modules/account/password-reset/forgot-password-screen';
 import ChangePasswordScreen from '../modules/account/password/change-password-screen';
-import EntityStackScreen from './entity-stack';
+import EntityStackScreen, { getEntityRoutes } from './entity-stack';
 import StorybookScreen from '../../storybook';
 <%_ if (websocket) { _%>
 import ChatScreen from '../modules/chat/chat-screen'
 <%_ } _%>
 import DrawerContent from './drawer/drawer-content';
-import * as Linking from 'expo-linking';
-import { createStackNavigator } from '@react-navigation/stack';
 import { isReadyRef, navigationRef } from './nav-ref';
-import { useReduxDevToolsExtension } from '@react-navigation/devtools';
-import NotFound from '../../NotFound';
-import { NavigationContainer } from '@react-navigation/native';
-import { getEntityRoutes } from './entity.stack';
+import NotFound from './not-found-screen';
+import { ModalScreen } from './modal.screen';
 
 export const drawerScreens = [
   {
@@ -61,10 +61,11 @@ export const drawerScreens = [
     auth: true,
   },
   {
-    name: 'Entities',
+    name: 'EntityStack',
     isStack: true,
     component: EntityStackScreen,
     options: {
+      title: 'Entities',
       headerShown: false,
     },
     auth: true,
@@ -102,10 +103,9 @@ const linking = {
       Home: {
         screens: {
           ...getDrawerRoutes(),
-          Entities: {
+          EntityStack: {
             path: 'entities',
             screens: {
-              EntityStack: '',
               ...getEntityRoutes(),
             },
           },
@@ -124,9 +124,9 @@ const getScreens = (props) => {
   const isAuthed = props.account !== null;
   return drawerScreens.map((screen, index) => {
     if (screen.auth === null || screen.auth === undefined) {
-      return <Drawer.Screen name={screen.name} component={screen.component} options={screen.options || {}} key={index} />;
+      return <Drawer.Screen name={screen.name} component={screen.component} options={screen.options} key={index} />;
     } else if (screen.auth === isAuthed) {
-      return <Drawer.Screen name={screen.name} component={screen.component} options={screen.options || {}} key={index} />;
+      return <Drawer.Screen name={screen.name} component={screen.component} options={screen.options} key={index} />;
     }
     return null;
   });
@@ -165,6 +165,30 @@ function NavContainer(props) {
             </Drawer.Navigator>
           )}
         </Stack.Screen>
+        <Stack.Screen
+          name="ModalScreen"
+          component={ModalScreen}
+          options={{
+            headerShown: false,
+            cardStyle: { backgroundColor: 'transparent' },
+            cardOverlayEnabled: true,
+            cardStyleInterpolator: ({ current: { progress } }) => ({
+              cardStyle: {
+                opacity: progress.interpolate({
+                  inputRange: [0, 0.5, 0.9, 1],
+                  outputRange: [0, 0.25, 0.7, 1],
+                }),
+              },
+              overlayStyle: {
+                opacity: progress.interpolate({
+                  inputRange: [0, 1],
+                  outputRange: [0, 0.5],
+                  extrapolate: 'clamp',
+                }),
+              },
+            }),
+          }}
+        />
         <Stack.Screen name="NotFound" component={NotFound} options={{ title: 'Oops!' }} />
       </Stack.Navigator>
     </NavigationContainer>
