--- a/generators/app/templates/app/shared/sagas/call-api.saga.js.ejs
+++ b/generators/app/templates/app/shared/sagas/call-api.saga.js.ejs
@@ -3,7 +3,7 @@ import { put, take } from 'redux-saga/effects'
 <%_ if (authType === 'oauth2') { _%>
 import LoginActions from '../../modules/login/login.reducer'
 <%_ } else { _%>
-import { loginScreen } from '../../navigation/layouts'
+import { navigate } from '../../navigation/nav-ref';
 <%_ } _%>
 
 // this saga is used for showing the LoginScreen when a 401 error is received
@@ -20,7 +20,7 @@ export function * callApi (apiCall) {
   <%_ if (authType === 'oauth2') { _%>
   LoginActions.loginRequest()
   <%_ } else { _%>
-  loginScreen()
+  navigate('LoginScreen')
   <%_ } _%>
   const action = yield take(['RELOGIN_OK', 'RELOGIN_ABORT'])
 
