--- a/generators/app/templates/app/navigation/modal.screen.js.ejs
+++ b/generators/app/templates/app/navigation/modal.screen.js.ejs
@@ -1,8 +1,9 @@
 import * as React from 'react';
 import { Button, StyleSheet, Text, useWindowDimensions, View } from 'react-native';
+import { Ionicons } from '@expo/vector-icons';
 /* eslint-disable react-native/no-inline-styles */
 
-export function ModalScreen({ route, navigation }) {
+export function ModalScreen({ route, navigation, isError = false }) {
   React.useEffect(() => {
     if (!navigation.canGoBack()) {
       navigation.navigate('Drawer');
@@ -12,15 +13,20 @@ export function ModalScreen({ route, navigation }) {
   const dimensions = useWindowDimensions();
   return (
     <View style={styles.outerContainer}>
-      <View style={[styles.backgroundContainer, { height: dimensions.height / 2, minWidth: dimensions.width / 2 }]}>
+      <View style={[styles.backgroundContainer, { height: dimensions.height / 3, minWidth: dimensions.width / 2 }]}>
         <View style={{ flex: 1, alignItems: 'center', justifyContent: 'center' }}>
           <View style={styles.flex}>
-            <Text style={styles.titleFont}>{route.params.title || ''}</Text>
-          </View>
-          <View style={styles.flex}>
+            <Text style={styles.titleFont}>
+              {isError ? (
+                <Ionicons name="md-close-circle-outline" style={styles.errorIcon} size={32} />
+              ) : (
+                <Ionicons name="md-checkmark-circle-outline" style={styles.successIcon} size={32} />
+              )}{' '}
+              {route.params.title || ''}
+            </Text>
             <Text style={styles.messageFont}>{route.params.message || ''}</Text>
           </View>
-          <View style={styles.flex}>
+          <View>
             <Button onPress={() => navigation.goBack()} title="DISMISS" />
           </View>
         </View>
@@ -32,13 +38,15 @@ export function ModalScreen({ route, navigation }) {
 const styles = StyleSheet.create({
   titleFont: {
     fontSize: 30,
-    margin: 20,
+    textAlign: 'center',
   },
   messageFont: {
     fontSize: 25,
   },
   flex: {
     flex: 1,
+    alignItems: 'center',
+    justifyContent: 'center',
   },
   outerContainer: {
     flex: 1,
@@ -47,7 +55,14 @@ const styles = StyleSheet.create({
     backgroundColor: 'transparent',
   },
   backgroundContainer: {
+    padding: 20,
     backgroundColor: 'white',
     borderRadius: 15,
+  },
+  errorIcon: {
+    color: 'red',
+  },
+  successIcon: {
+    color: 'green',
   },
 });
