--- a/generators/app/templates/app/modules/home/launch-screen.js.ejs
+++ b/generators/app/templates/app/modules/home/launch-screen.js.ejs
@@ -1,11 +1,14 @@
 import React from 'react';
 import { ScrollView, Text, Image, View, Platform } from 'react-native';
+import { Ionicons } from '@expo/vector-icons';
+import { connect } from 'react-redux';
 
 import LearnMoreLinks from './learn-more-links.component.js';
 import { Images } from '../../shared/themes';
 import styles from './launch-screen.styles';
 
-export default function LaunchScreen() {
+function LaunchScreen(props) {
+  const { account } = props;
   return (
     <View style={styles.mainContainer} testID="launchScreen">
       <Image source={Images.background} style={styles.backgroundImage} resizeMode="stretch" />
@@ -14,6 +17,19 @@ export default function LaunchScreen() {
           <Image source={Images.logoJhipster} style={styles.logo} />
           <Text style={styles.welcomeText}>{'Welcome to your JHipster React Native app.'}</Text>
         </View>
+        {account && account.login ? (
+          <View style={[styles.authContainer, styles.authContainerTrue]}>
+            <Text style={styles.authText}>
+              <Ionicons name="md-checkmark-circle" size={22} color={'white'} /> You are signed in as {account.login}
+            </Text>
+          </View>
+        ) : (
+          <View style={[styles.authContainer, styles.authContainerFalse]}>
+            <Text style={styles.authText}>
+              <Ionicons name="md-information-circle" size={22} color={'white'} /> You are not signed in.
+            </Text>
+          </View>
+        )}
         <View style={styles.hairline} />
         {/* <Header /> */}
         {global.HermesInternal == null ? null : (
@@ -47,3 +63,7 @@ export default function LaunchScreen() {
     </View>
   );
 }
+
+const mapStateToProps = (state) => ({ account: state.account.account });
+const mapDispatchToProps = (dispatch) => ({});
+export default connect(mapStateToProps, mapDispatchToProps)(LaunchScreen);
