--- a/generators/app/templates/app/modules/home/launch-screen.styles.js.ejs
+++ b/generators/app/templates/app/modules/home/launch-screen.styles.js.ejs
@@ -1,6 +1,6 @@
-import { StyleSheet } from 'react-native'
+import { StyleSheet } from 'react-native';
 
-import { Metrics, ApplicationStyles, Colors } from '../../shared/themes/'
+import { Metrics, ApplicationStyles, Colors } from '../../shared/themes/';
 
 export default StyleSheet.create({
   ...ApplicationStyles.screen,
@@ -62,4 +62,21 @@ export default StyleSheet.create({
     paddingRight: 12,
     textAlign: 'right',
   },
-})
+  authContainer: {
+    margin: 30,
+    padding: 5,
+    borderRadius: 5,
+  },
+  authContainerTrue: {
+    backgroundColor: '#02b875',
+  },
+  authContainerFalse: {
+    backgroundColor: '#efbb6d',
+  },
+  authText: {
+    textAlign: 'center',
+    fontSize: 18,
+    color: Colors.snow,
+    fontWeight: '600',
+  },
+});
