--- a/generators/app/templates/App.js.ejs
+++ b/generators/app/templates/App.js.ejs
@@ -1,15 +1,24 @@
 import * as React from 'react';
 import { Provider } from 'react-redux';
 import createStore from './app/shared/reducers';
+import * as SplashScreen from 'expo-splash-screen';
 
 import NavContainer from './app/navigation/nav-container';
 
 const store = createStore();
 
 export default function App() {
-  return (
+  // prevent the splashscreen from disappearing until the redux store is completely ready (hidden in nav-container.js)
+  const [displayApp, setDisplayApp] = React.useState(false);
+  React.useEffect(() => {
+    if (!displayApp) {
+      SplashScreen.preventAutoHideAsync().then(() => setDisplayApp(true));
+    }
+  }, [displayApp, setDisplayApp]);
+
+  return displayApp ? (
     <Provider store={store}>
       <NavContainer />
     </Provider>
-  );
+  ) : null;
 }
