--- a/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
@@ -7,7 +7,9 @@ import ChangePasswordActions from '../password/change-password.reducer';
 import styles from './change-password-screen.styles';
 import * as Yup from 'yup';
 import { useDidUpdateEffect } from '../../../shared/util/use-did-update-effect';
-import { Form, FormButton, FormField } from '../../../shared/components/form';
+import FormButton from '../../../shared/components/form/jhi-form-button';
+import FormField from '../../../shared/components/form/jhi-form-field';
+import Form from '../../../shared/components/form/jhi-form';
 
 function ChangePasswordScreen(props) {
   // setup error state for displaying error messages
