--- a/generators/app/templates/app/shared/components/form/jhi-form-field.story.js.ejs
+++ b/generators/app/templates/app/shared/components/form/jhi-form-field.story.js.ejs
@@ -1,7 +1,9 @@
 import React, { createRef } from 'react';
 import { storiesOf } from '@storybook/react-native';
 import { View, StyleSheet, Text } from 'react-native';
-import { Form, FormButton, FormField } from './index';
+import FormButton from './jhi-form-button';
+import FormField from './jhi-form-field';
+import Form from './jhi-form';
 import * as Yup from 'yup';
 import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view';
 import { ApplicationStyles } from '../../../shared/themes';
