--- a/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
@@ -5,7 +5,9 @@ import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view
 import * as Yup from 'yup';
 
 import { useDidUpdateEffect } from '../../../shared/util/use-did-update-effect';
-import { Form, FormButton, FormField } from '../../../shared/components/form';
+import FormButton from '../../../shared/components/form/jhi-form-button';
+import FormField from '../../../shared/components/form/jhi-form-field';
+import Form from '../../../shared/components/form/jhi-form';
 import ForgotPasswordActions from './forgot-password.reducer';
 import styles from './forgot-password-screen.styles';
 
