--- a/generators/app/templates/app/modules/login/login-screen.js.ejs
+++ b/generators/app/templates/app/modules/login/login-screen.js.ejs
@@ -6,7 +6,9 @@ import * as Yup from 'yup';
 
 import LoginActions from './login.reducer';
 import { useDidUpdateEffect } from '../../shared/util/use-did-update-effect';
-import { Form, FormButton, FormField } from '../../shared/components/form';
+import FormButton from '../../shared/components/form/jhi-form-button';
+import FormField from '../../shared/components/form/jhi-form-field';
+import Form from '../../shared/components/form/jhi-form';
 import styles from './login-screen.styles';
 
 function LoginScreen(props) {
