--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -42,6 +42,7 @@
     "react-native-gesture-handler": "REPLACE_WITH_VERSION",
     "react-native-reanimated": "REPLACE_WITH_VERSION",
     "react-native-safe-area-context": "REPLACE_WITH_VERSION",
+    "react-native-screens": "REPLACE_WITH_VERSION",
     "react-native-web": "REPLACE_WITH_VERSION",
     "@expo/vector-icons": "REPLACE_WITH_VERSION",
     "expo-linking": "REPLACE_WITH_VERSION",
