remove UAA and Session auth support

--- a/generators/app/templates/app/config/app-config.js.ejs
+++ b/generators/app/templates/app/config/app-config.js.ejs
@@ -1,11 +1,4 @@
-// Simple React Native specific changes
-import { Platform } from 'react-native'
-
 export default {
-  <%_ if (authType ==='uaa') { _%>
-  // this is your UAA's base name, lower-cased and followed by a /
-  uaaBaseUrl: 'services/<%= props.uaaBaseUrl %>/',
-  <%_ } _%>
   // use 10.0.2.2 for Android to connect to host machine
-  apiUrl: Platform.OS === 'android' ? 'http://10.0.2.2:8080/' : 'http://localhost:8080/',
+  apiUrl: 'http://localhost:8080/',
 }
