--- a/generators/app/templates/app/modules/login/login.sagas.js.ejs
+++ b/generators/app/templates/app/modules/login/login.sagas.js.ejs
@@ -1,4 +1,4 @@
-import { call, put<% if (authType === 'oauth2' || authType === 'jwt') { %>, select<% } %> } from 'redux-saga/effects'
+import { call, put, select } from 'redux-saga/effects'
 
 import LoginActions from './login.reducer'
 import AccountActions from '../../shared/reducers/account.reducer'
@@ -11,9 +11,7 @@ import { doOauthPkceFlow } from './login.utils';
 const oauthClientId = 'PUT-YOUR-OAUTH-CLIENT-ID-HERE';
 <%_ } _%>
 
-<%_ if (authType === 'oauth2' || authType === 'jwt') { _%>
 export const selectAuthToken = (state) => state.login.authToken
-<%_ } _%>
 // attempts to login
 <%_ if (authType === 'oauth2') { _%>
 export function * login (api) {
@@ -47,30 +45,20 @@ export function * login (api) {
   }
 }
 
-<%_ } else { _%>
+<%_ } else if (authType === 'jwt') { _%>
 export function * login (api, { username, password }) {
-  <%_ if (authType === 'session') { _%>
-  const authObj = 'username=' + username + '&password=' + password + '&remember-me=true'
-  <%_ } else if (authType === 'jwt' || authType === 'uaa') { _%>
   const authObj = {
     username: username,
     password: password,
     rememberMe: true
   }
-  <%_ } _%>
 
   const response = yield call(api.login, authObj)
 
   // success?
   if (response.ok) {
-    <%_ if (authType === 'jwt') { _%>
     yield call(api.setAuthToken, response.data.id_token)
     yield put(LoginActions.loginSuccess(response.data.id_token))
-    <%_} else if (authType === 'session') { _%>
-    yield put(LoginActions.loginSuccess(response.data))
-    <%_} else if (authType === 'uaa') { _%>
-    yield put(LoginActions.loginSuccess(response.data))
-    <%_ } _%>
     yield put(AccountActions.accountRequest())
     <%_ if (websocket) { _%>
     WebsocketService.setToken(response.data.id_token)
@@ -88,16 +76,12 @@ export function * login (api, { username, password }) {
 <%_ } _%>
 // attempts to logout
 export function * logout (api) {
-  <%_ if (authType === 'session' || authType === 'uaa') { _%>
-  yield call(api.logout)
-  <%_ } else if (authType === 'jwt' || authType === 'oauth2') { _%>
   yield call(api.removeAuthToken)
-  <%_ } _%>
   yield put(AccountActions.accountRequest())
   yield put(LoginActions.logoutSuccess())
   yield put({ type: 'RELOGIN_ABORT' })
 }
-<%_ if (authType === 'jwt' || authType === 'oauth2') { _%>
+
 // loads the login
 export function * loginLoad (api) {
   const authToken = yield select(selectAuthToken)
@@ -110,4 +94,3 @@ export function * loginLoad (api) {
   }
   yield put(LoginActions.loginLoadSuccess())
 }
-<%_ } _%>
