--- a/generators/app/templates/app/shared/services/api.js.ejs
+++ b/generators/app/templates/app/shared/services/api.js.ejs
@@ -1,8 +1,5 @@
 // a library to wrap and simplify api calls
 import apisauce from 'apisauce'
-<%_ if (authType === 'session' || authType === 'uaa') { _%>
-import CookieManager from '@react-native-community/cookies'
-<%_ } _%>
 
 import AppConfig from '../../config/app-config'
 
@@ -24,15 +21,6 @@ const create = (baseURL = AppConfig.apiUrl) => {
     // 10 second timeout...
     timeout: 10000
   })
-  <%_ if (authType === 'session' || authType === 'uaa') { _%>
-  api.addAsyncRequestTransform(request => async (request) => {
-    const cookies = await CookieManager.get(baseURL)
-    if (cookies['XSRF-TOKEN'] && cookies['XSRF-TOKEN'].value) {
-      request.headers['X-XSRF-TOKEN'] = cookies['XSRF-TOKEN'].value
-    }
-    return request
-  })
-  <%_ } _%>
 
   // ------
   // STEP 2
@@ -48,28 +36,20 @@ const create = (baseURL = AppConfig.apiUrl) => {
   // Since we can't hide from that, we embrace it by getting out of the
   // way at this level.
   //
-  <%_ if (authType === 'jwt' || authType === 'oauth2') { _%>
   const setAuthToken = (userAuth) => api.setHeader('Authorization', 'Bearer ' + userAuth)
   const removeAuthToken = () => api.deleteHeader('Authorization')
-  <%_ } _%>
   <%_ if (authType === 'oauth2') { _%>
   const getOauthInfo = () => api.get('api/auth-info')
   const getOauthIssuerInfo = (issuerUrl) => api.get(`${issuerUrl}/.well-known/openid-configuration`)
-  <%_ } else if (authType === 'session') { _%>
-  const login = (userAuth) => api.post('api/authentication', userAuth, { headers: { 'Content-Type': 'application/x-www-form-urlencoded', 'Accept': 'application/json, text/plain, */*' } })
-  const logout = () => api.post('api/logout')
   <%_ } else if (authType === 'jwt') { _%>
   const login = (userAuth) => api.post('api/authenticate', userAuth)
-  <%_ } else if (authType === 'uaa') { _%>
-  const login = (userAuth) => api.post('auth/login', userAuth)
-  const logout = () => api.post('auth/logout')
   <%_ } _%>
-  const register = (user) => api.post(<% if (authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/register', user)
-  const forgotPassword = (data) => api.post(<% if (authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/account/reset-password/init', data, { headers: { 'Content-Type': 'text/plain', 'Accept': 'application/json, text/plain, */*' } })
+  const register = (user) => api.post('api/register', user)
+  const forgotPassword = (data) => api.post('api/account/reset-password/init', data, { headers: { 'Content-Type': 'text/plain', 'Accept': 'application/json, text/plain, */*' } })
 
-  const getAccount = () => api.get(<% if (authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/account')
-  const updateAccount = (account) => api.post(<% if (authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/account', account)
-  const changePassword = (currentPassword, newPassword) => api.post(<% if (authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/account/change-password', { currentPassword, newPassword }, { headers: { 'Content-Type': 'application/json', 'Accept': 'application/json, text/plain, */*' } })
+  const getAccount = () => api.get('api/account')
+  const updateAccount = (account) => api.post('api/account', account)
+  const changePassword = (currentPassword, newPassword) => api.post('api/account/change-password', { currentPassword, newPassword }, { headers: { 'Content-Type': 'application/json', 'Accept': 'application/json, text/plain, */*' } })
 
   const getUser = (userId) => api.get('api/users/' + userId)
   const getUsers = (options) => api.get('api/users', options)
@@ -98,16 +78,12 @@ const create = (baseURL = AppConfig.apiUrl) => {
     getUser,
     deleteUser,
     // jhipster-react-native-api-export-needle
-    <%_ if (authType === 'session' || authType === 'uaa') { _%>
-    logout,
-    <%_ } else { _%>
     setAuthToken,
     removeAuthToken,
-    <%_ } _%>
     <%_ if (authType === 'oauth2') { _%>
     getOauthInfo,
     getOauthIssuerInfo,
-    <%_ } else { _%>
+    <%_ } else if (authType === 'jwt') { _%>
     login,
     <%_ } _%>
     register,
