--- a/generators/app/templates/test/spec/modules/login/login.sagas.spec.js.ejs
+++ b/generators/app/templates/test/spec/modules/login/login.sagas.spec.js.ejs
@@ -1,7 +1,7 @@
 import FixtureAPI from '../../../../app/shared/services/fixture-api'
-import { call, put<% if (authType === 'jwt' || authType === 'oauth2') { %>, select<% } %> } from 'redux-saga/effects'
+import { call, put, select } from 'redux-saga/effects'
 
-import { login, logout<% if (authType === 'jwt' || authType === 'oauth2') { %>, loginLoad, selectAuthToken<% } %> } from '../../../../app/modules/login/login.sagas'
+import { login, logout, loginLoad, selectAuthToken } from '../../../../app/modules/login/login.sagas'
 import LoginActions from '../../../../app/modules/login/login.reducer'
 import AccountActions from '../../../../app/shared/reducers/account.reducer'
 
@@ -24,37 +24,20 @@ test('login success path', () => {
   expect(step()).toEqual(put(AccountActions.accountRequest()))
   // Close the relogin popup if needed
   expect(step()).toEqual(put({ type: 'RELOGIN_OK' }))
-  <%_} else { _%>
-  <%_ if (authType === 'session') { _%>
-  const authObj = 'username=user&password=user&remember-me=true'
-  <%_ } else if (authType === 'jwt' || authType === 'uaa') { _%>
+  <%_} else if (authType === 'jwt') { _%>
   const authObj = {
     username: 'user',
     password: 'user',
     rememberMe: true
   }
-  <%_ } _%>
   const response = FixtureAPI.login(authObj)
-  <%_ if (authType === 'jwt') { _%>
   const step = stepper(login(FixtureAPI, authObj))
-  <%_ } else { _%>
-  const step = stepper(login(FixtureAPI, { username: 'user', password: 'user' }))
-  <%_ } _%>
 
-  <%_ if (authType === 'jwt') { _%>
   expect(step(response)).toEqual(call(FixtureAPI.login, { username: 'user', password: 'user', rememberMe: true }))
-  <%_} else if (authType === 'uaa' || authType === 'session') { _%>
-  expect(step(response)).toEqual(call(FixtureAPI.login, authObj))
-  <%_ } _%>
-  <%_ if (authType === 'jwt') { _%>
   // Set the auth token on the API
   expect(step(response)).toEqual(call(FixtureAPI.setAuthToken, response.data.id_token))
   // Store the auth token in redux
   expect(step(response)).toEqual(put(LoginActions.loginSuccess(response.data.id_token)))
-  <%_} else if (authType === 'session' || authType === 'uaa') { _%>
-  // Call success with the response
-  expect(step(response)).toEqual(put(LoginActions.loginSuccess(response.data)))
-  <%_ } _%>
   // Request the account details
   expect(step()).toEqual(put(AccountActions.accountRequest()))
   // Close the relogin popup if needed
@@ -71,16 +54,12 @@ test('login failure path', () => {
   // set response.ok to false as if the oauth issuer is down
   response.ok = false
   expect(step(response)).toEqual(put(LoginActions.loginFailure('Could not connect to OAuth2 Provider')))
-  <%_} else { _%>
-  <%_ if (authType === 'session') { _%>
-  const authObj = 'username=user&password=user2&remember-me=true'
-  <%_ } else if (authType === 'jwt' || authType === 'uaa') { _%>
+  <%_} else if (authType === 'jwt') { _%>
   const authObj = {
     username: 'user',
     password: 'user2',
     rememberMe: true
   }
-  <%_ } _%>
   const response = FixtureAPI.login(authObj)
   const step = stepper(login(FixtureAPI, { username: 'user', password: 'user2' }))
 
@@ -90,7 +69,6 @@ test('login failure path', () => {
   expect(step(response)).toEqual(put(LoginActions.loginFailure('Bad credentials')))
   <%_ } _%>
 })
-<%_ if (authType === 'jwt' || authType === 'oauth2') { _%>
 test('login load path with no token', () => {
   const step = stepper(loginLoad(FixtureAPI))
   // Attempt to select the token
@@ -108,31 +86,17 @@ test('login load path with a token', () => {
   // The token has been set so call success
   expect(step()).toEqual(put(LoginActions.loginLoadSuccess()))
 })
-<%_ } _%>
 test('logout success path', () => {
   const step = stepper(logout(FixtureAPI))
-  <%_ if (authType === 'session' || authType === 'uaa') { _%>
-  const response = FixtureAPI.logout()
-  // Remove the API token
-  expect(step(response)).toEqual(call(FixtureAPI.logout))
-  <%_ } else if (authType === 'jwt') { _%>
   expect(step()).toEqual(call(FixtureAPI.removeAuthToken))
   FixtureAPI.removeAuthToken()
-  <%_ } else if (authType === 'oauth2') { _%>
-  // clear cookies
-  step()
-  expect(step()).toEqual(call(FixtureAPI.removeAuthToken))
-  FixtureAPI.removeAuthToken()
-  <%_ } _%>
   // Reset the account and logout
   expect(step()).toEqual(put(AccountActions.accountRequest()))
   expect(step()).toEqual(put(LoginActions.logoutSuccess()))
   expect(step()).toEqual(put({ type: 'RELOGIN_ABORT' }))
 })
-<%_ if (authType === 'jwt' || authType === 'oauth2') { _%>
 test('selects the auth token', () => {
   const state = { login: { authToken: 'hi' } }
   // Retrieve the API token
   expect(selectAuthToken(state)).toEqual('hi')
 })
-<%_ } _%>
